<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_refresh"
        android:icon="@drawable/mp_ic_refresh"
        android:orderInCategory="100"
        android:title="@string/mp_refresh"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_search"
        android:icon="@drawable/mp_ic_search"
        android:orderInCategory="100"
        android:title="@string/mp_search"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_disc"
        android:icon="@drawable/mp_ic_folder"
        android:orderInCategory="100"
        android:title="@string/mp_disc"
        app:showAsAction="ifRoom" />
</menu>
